# main-app

./: .env  .env.example  .gitignore  CLAUDE.md  ProjectStructures.json  ProjectStructures.md  admin_server.py  architecture.md  compose.yml  cons.txt  conversation.md  convo.txt  public_server.py  pyproject.toml  typing.txt
.claude/: settings.local.json
KAuthApp/backend/application/dto/: authDTO.py
KAuthApp/backend/application/services/: authService.py
KAuthApp/backend/domain/exceptions/: authExceptions.py
KAuthApp/backend/domain/models/: refreshToken.py  user.py
KAuthApp/backend/infrastructure/: router.py
KAuthApp/backend/infrastructure/database/: alembic.ini
KAuthApp/backend/infrastructure/email/: mockEmailService.py
KAuthApp/backend/infrastructure/repositories/: refreshTokenRepository.py  userRepository.py
KAuthApp/frontend/: .env.example  API.md  IMPLEMENTATION.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js
KAuthApp/frontend/src/controllers/: authController.ts
KAuthApp/frontend/src/layouts/: Layout.astro
KAuthApp/frontend/src/pages/: forgot-password.astro  sign-in.astro  sign-up.astro  verify-otp.astro
KAuthApp/frontend/src/styles/: global.css
KAuthentication/backend/: alembic.ini  main.py  pyproject.toml  start.sh
KAuthentication/backend/application/input/: authInput.py
KAuthentication/backend/application/output/: authOutput.py
KAuthentication/backend/domain/client/core/: UserProfileCore.py
KAuthentication/backend/domain/client/models/: UserProfileModels.py  UserSessionModels.py
KAuthentication/backend/domain/exceptions/: authenticationException.py
KAuthentication/backend/domain/services/: authenticationService.py  emailService.py  passwordService.py  tokenService.py
KAuthentication/backend/domain/utilities/: BaseModel.py
KAuthentication/backend/infrastructure/database/alembic/: env.py
KAuthentication/backend/infrastructure/database/alembic/versions/: 50aa89e1532b_initial_schema_users_and_sessions.py
KAuthentication/backend/infrastructure/database/repositories/: sessionRepository.py  userRepository.py
KAuthentication/backend/infrastructure/http/dependencies/: authDependency.py
KAuthentication/backend/infrastructure/http/routers/: authRouter.py
KSysAdmin/backend/infrastructure/: router.py
KSysAdmin/frontend/: .env.example  App.tsx  README.md  index.html  metadata.json  package.json  pnpm-lock.yaml  types.ts
KSysAdmin/frontend/api/: aggregationApi.ts  apiClient.ts  healthApi.ts  metricsApi.ts  securityApi.ts
KSysAdmin/frontend/components/: Icons.tsx  LogTable.tsx  SecurityPanel.tsx  ServiceTopology.tsx  StatsCard.tsx  TerminalWindow.tsx  TopEndpoints.tsx
KSysAdmin/frontend/pages/: ConsolePage.tsx  DashboardPage.tsx  DatabasePage.tsx  DeploymentsPage.tsx  FinancePage.tsx  HealthPage.tsx  IncidentsPage.tsx  JobsPage.tsx  MetricsPage.tsx  SecurityPage.tsx  ServicesPage.tsx  SettingsPage.tsx  UserManagementPage.tsx
KSysAdmin/frontend/utils/: mockData.ts
KSysPayment/backend/infrastructure/: router.py
KSysPayment/frontend/: package.json
backup/: nginx.conf  testCrypto.py  testRateLimit.py
docker-images/postgres/init/: 01_init.sql
md/: FACTORY_SETUP_PLAN.md  LOGGING_EXAMPLES.md
nginx/: convo.txt  nginx.conf
nginx/html/: honeypot.html  honeypot.json
plans/: PHASE_0_COMPLETE.md  abundant-scribbling-cocke.md  delightful-wondering-hedgehog.md  dreamy-soaring-castle.md  for_next_phase.md  mossy-prancing-feather.md  tingly-orbiting-hoare.md
scripts/: admin_server.py  gen_structures.sh  generateTestMetrics.py  start_nginx.sh  testFactories.sh  test_rate_limit.sh
shared/backend/: cryptoFactory.py  loggingFactory.py
shared/backend/config/: settings.py
shared/backend/database/: baseRepository.py  engine.py
shared/backend/exceptions/: __init__.py  baseException.py  errorResponse.py  exceptionHandlers.py
shared/backend/health/: __init__.py  healthCheck.py
shared/backend/middleware/: __init__.py  corsMiddleware.py  requestIdMiddleware.py
shared/backend/redis/: client.py
shared/backend/utils/: uuid.py
shared/rust-crypto/: Cargo.toml  pyproject.toml
shared/rust-crypto/src/: lib.rs
(+53 files in other folders)
